<resources>
    <string name="app_name">SearchYourSide</string>



    <string name="lazyChargerBtn">懶人記帳</string>
    <string name="takePicAndCharge">拍照記帳</string>
    <string name="TakePicBtnTxt">拍照</string>
    <string name="AddDataBtnTxt">入帳</string>
    <string name="ItemNameTxt">商品\n名稱</string>
    <string name="ItemTypeTxt">商品\n類別</string>
    <string-array name="Consumer_types">
        <item>飯類</item>
        <item>粥類</item>
        <item>麵類</item>
        <item>油炸類</item>
        <item>中式</item>
        <item>西式</item>
        <item>點心</item>
        <item>冰飲</item>
        <item>其他</item>
    </string-array>
    <string name="ItemPrice">商品\n價格</string>

    <string name="calendarSearch">月曆查詢</string>
    <string name="DeleteBtn">刪除\n紀錄</string>

    <string name="barChartView">飲食開銷</string>

    <string name="smartButlerBtn">美食羅盤</string>
    <string name="SearchFoodTxt">美食搜尋 :</string>
    <string name="WaitForGPSBtn">等候定位完成...</string>
    <string name="StartSearchBtn">點我搜尋</string>
    <string name="SearchFoodBtn">觀看菜單</string>
    <string name="HelpEditBtn">協助編輯</string>
    <string name="GPSBtn">導航 GO!</string>
    <string name="LoginIDTxt">會員\n帳號</string>
    <string name="IDEditHint">請輸入完整信箱帳號</string>
    <string name="LoginPWTxt">會員\n密碼</string>
    <string name="PWEditHint">輸入5~16字元的字母數字</string>
    <string name="LoginBtn">登入</string>
    <string name="RegisterTxt">點我註冊</string>
    <string name="ForgotPWTxt">忘記密碼？</string>
    <string name="StoreNameTxt">店家\n名稱</string>
    <string name="StoreName">店家名稱</string>
    <string name="StoreAddress">店家地址</string>
    <string name="StoreDescription">店家介紹</string>
    <string name="StoreTime">營業時間：</string>
    <string-array name="HoursTime">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="MinuteTime">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="StoreRemarkNote">店家備註</string>
    <string name="StoreEditBtn">提交編輯</string>
    <string name="EditCancelBtn">取消編輯</string>
    <string name="FoodNameTxt">餐點名稱</string>
    <string name="FoodPriceTxt">餐點價格</string>
    <string name="FoodAddScore">按個讚</string>

    <string name="optionBtn">相關設置</string>
    <string name="setBudgetTxt">每月\n預算</string>
    <string name="setRglCostTxt">固定\n開銷</string>
    <string name="setOptionsBtn">儲存設定</string>
    <string name="setGpsBtn">GPS設定</string>
    <string name="aboutUsBtn">關於我們</string>
    <string name="logoutBtn">登出</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_lazy_charge">飲食記帳</string>
    <string name="title_activity_smart_butler">美食羅盤</string>
    <string name="title_activity_option">相關設置</string>
    <string name="title_activity_food_list">搜尋結果</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_store_data">EditStoreDataActivity</string>
</resources>
