<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/LoginIDTxt"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/IDEditHint"
            android:id="@+id/MemberIDEdit"
            android:inputType="textEmailAddress"/>

        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/LoginPWTxt"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/PWEditHint"
            android:id="@+id/MemberPWEdit"
            android:inputType="textPassword"
            android:password="true"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"/>

        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp">

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/LoginBtn"
            android:textSize="24sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/LoginBtn"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/RegisterTxt"
            android:textSize="24sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/MemberRegisterBtn"/>

        <!--<Button-->
            <!--android:layout_width="0sp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/ForgotPWTxt"-->
            <!--android:layout_marginRight="5sp"-->
            <!--android:layout_marginTop="10sp"-->
            <!--android:layout_marginBottom="10sp"-->
            <!--android:id="@+id/ForgotPWBtn"/>-->

        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
