<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49494A"
    android:orientation="vertical"
    tools:context="com.power.kiwi.searchyourside.OptionsActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/setBudgetTxt"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:id="@+id/setBudgetEdt"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:inputType="number"
            android:singleLine="true"/>

        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/setRglCostTxt"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:id="@+id/setRglCostEdt"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:inputType="number"
            android:singleLine="true"/>

        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2.5sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/setOptionsBtn"
            android:textSize="28sp"
            android:text="@string/setOptionsBtn"
            android:textColor="#ffffff"
            android:background="#777777"/>


        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2.5sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/setGpsBtn"
            android:text="@string/setGpsBtn"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:background="#777777"/>

        </TableRow>

    <TableRow
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="2.5sp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aboutUsBtn"
        android:text="@string/aboutUsBtn"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:background="#777777"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2.5sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logoutBtn"
            android:text="@string/logoutBtn"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:background="#777777"/>
    </TableRow>


</LinearLayout>
