<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cameraView"
        android:orientation="vertical">

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <TableLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/takePicBtn"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/TakePicBtnTxt"
                    android:gravity="center"
                    android:textSize="64sp"/>

                <Button
                    android:id="@+id/addDataBtn"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/AddDataBtnTxt"
                    android:gravity="center"
                    android:textSize="64sp"/>

            </TableLayout>

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ItemNameTxt"
                android:gravity="center"
                android:textSize="24sp"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ItemTypeTxt"
                android:gravity="center"
                android:textSize="24sp"/>

            <Spinner
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"/>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ItemPrice"
                android:gravity="center"
                android:textSize="24sp"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
        </TableRow>

        </LinearLayout>


</LinearLayout>
