<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#49494A">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/storeNameTxt"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#ffffff"/>

    </TableRow>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/storeDataTxt"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="#555555"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/SearchFoodBtn"
        android:id="@+id/SearchFoodBtn"
        android:textSize="32sp"
        android:layout_margin="5sp"
        android:textColor="#ffffff"
        android:background="#777777"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/HelpEditBtn"
            android:id="@+id/HelpEditBtn"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:background="#777777"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/GPSBtn"
            android:id="@+id/GPSGoBtn"
            android:textSize="28sp"
            android:layout_marginLeft="10sp"
            android:textColor="#ffffff"
            android:background="#777777"/>

        </LinearLayout>

</LinearLayout>
